[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["batch_or_bust","cu_counter", "merkle_spark", "zero_copy_read"]

[workspace.dependencies]
pinocchio = "0.10.1"
solana-program-log = "1.1.0"
solana-program-test = "1.18"
solana-sdk = "1.18"
pinocchio-system = "0.5.0"
sha2 = "0.10"
